[tool.poetry]
name = "adspying"
version = "0.1.1"
description = "Find the best deals on second-hand ads websites :dart:"
license = "MIT"
authors = ["apehex <apehex@protonmail.com>"]
readme = ".github/README.rst"
repository = "https://github.com/apehex/adspying.git"
keywords = ["scraping", "scrapy-crawler", "second-hand ads", "real-estate"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: Scrapy",
]

[tool.poetry.dependencies]
python = "^3.7"
beautifulsoup4 = "*"
geopy = "*"
nltk = "*"
pymongo = "*"
scrapy = "*"

[tool.poetry.dev-dependencies]
flake8 = "*"
sphinx = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
